Added Calculate Balance Part

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,10 +6,36 @@ body{
 .submit-area{
     margin-top: 50px;
     border-radius: 10px;
-    box-shadow: 5px 5px 10px black;  
+    box-shadow: 5px 5px 10px gray;  
     padding: 40px;
 }
 
 .submit-area h3{
     line-height: 4rem;
+}
+
+/* Transaction Area  */
+#transaction-area{
+    display: none;
+}
+
+.balance-status{
+    padding: 20px;
+}
+.status{
+    padding: 20px;
+    color:white;
+    border-radius: 10px;
+}
+
+.deposit{
+    background-color: slateblue;
+}
+
+.withdraw{
+    background-color: seagreen;
+}
+
+.balance{
+    background-color: orangered;
 }
